# ccomidi-nih

./: CLAUDE.md  Cargo.toml  README.md  bundler.toml
.cargo/: config.toml
plugin/: Cargo.toml
plugin/src/: editor.rs  lib.rs  params.rs  voicegroup.rs
plugin/src/core/: command.rs  encode.rs  mod.rs  sender.rs
xtask/: Cargo.toml
xtask/src/: main.rs
