[package]
name = "ccomidi-nih"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NIH-plug + Vizia prototype for ccomidi"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
