[package]
name = "ccomidi-nih"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NIH-plug + Vizia prototype for ccomidi"

[lib]
# "cdylib" builds the CLAP-loadable shared library.
# "rlib" is also needed so `cargo test` can link the crate as a normal Rust
# library for unit tests.
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# Voicegroup bridge: parse poryaaaa_state.json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Voicegroup bridge: locate our own .clap bundle on disk via dladdr(3).
# Needed because the DAW loads us as a dylib and `current_exe()` points
# at the DAW, not at us.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
